[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/Backgrounds/background_video.ogv" type="VideoStream" id=1]
[ext_resource path="res://assets/Quicksand-SemiBold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/Sounds/Intro Theme_0.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/Backgrounds/play.png" type="Texture" id=4]
[ext_resource path="res://assets/Backgrounds/settings_text.png" type="Texture" id=5]
[ext_resource path="res://assets/Backgrounds/levels.png" type="Texture" id=6]
[ext_resource path="res://MainMenu.gd" type="Script" id=7]
[ext_resource path="res://assets/Backgrounds/skyworld_text.png" type="Texture" id=8]
[ext_resource path="res://assets/Sounds/clicked.ogg" type="AudioStream" id=9]
[ext_resource path="res://assets/Backgrounds/help_text.png" type="Texture" id=10]
[ext_resource path="res://assets/Backgrounds/quit_text.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=7]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.945098, 0.52549, 0.152941, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.894118, 0.705882, 0.133333, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 0.34902, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=8]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.945098, 0.52549, 0.152941, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.894118, 0.705882, 0.133333, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 1, 0.34902, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=9]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.945098, 0.52549, 0.152941, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.894118, 0.705882, 0.133333, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 1, 0.34902, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="VideoPlayer" type="VideoPlayer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
stream = ExtResource( 1 )
autoplay = true

[node name="SkyWard" type="TextureRect" parent="."]
margin_top = 48.0
margin_right = 1024.0
margin_bottom = 248.0
texture = ExtResource( 8 )
stretch_mode = 6

[node name="StartButton" type="Button" parent="."]
margin_left = 339.0
margin_top = 232.0
margin_right = 680.0
margin_bottom = 376.0
custom_colors/font_color = Color( 1, 0.941176, 0.74902, 1 )
custom_colors/font_color_hover = Color( 1, 0.823529, 0.329412, 1 )
custom_colors/font_color_pressed = Color( 1, 0.737255, 0, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = SubResource( 10 )
icon = ExtResource( 4 )
icon_align = 1
expand_icon = true

[node name="HelpButton" type="Button" parent="."]
margin_left = 64.0
margin_top = 440.0
margin_right = 256.0
margin_bottom = 521.0
custom_colors/font_color = Color( 1, 0.941176, 0.74902, 1 )
custom_colors/font_color_hover = Color( 1, 0.823529, 0.329412, 1 )
custom_colors/font_color_pressed = Color( 1, 0.737255, 0, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/normal = SubResource( 11 )
icon = ExtResource( 10 )
icon_align = 1
expand_icon = true

[node name="QuitButton" type="Button" parent="."]
margin_left = 296.0
margin_top = 440.0
margin_right = 488.0
margin_bottom = 521.0
custom_colors/font_color = Color( 1, 0.941176, 0.74902, 1 )
custom_colors/font_color_hover = Color( 1, 0.823529, 0.329412, 1 )
custom_colors/font_color_pressed = Color( 1, 0.737255, 0, 1 )
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 18 )
custom_styles/normal = SubResource( 12 )
icon = ExtResource( 11 )
icon_align = 1
expand_icon = true

[node name="SettingsButton" type="Button" parent="."]
margin_left = 536.0
margin_top = 440.0
margin_right = 728.0
margin_bottom = 521.0
custom_colors/font_color = Color( 1, 0.941176, 0.74902, 1 )
custom_colors/font_color_hover = Color( 1, 0.823529, 0.329412, 1 )
custom_colors/font_color_pressed = Color( 1, 0.737255, 0, 1 )
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 18 )
custom_styles/normal = SubResource( 12 )
icon = ExtResource( 5 )
icon_align = 1
expand_icon = true

[node name="LevelsButton" type="Button" parent="."]
margin_left = 776.0
margin_top = 440.0
margin_right = 968.0
margin_bottom = 521.0
custom_colors/font_color = Color( 1, 0.941176, 0.74902, 1 )
custom_colors/font_color_hover = Color( 1, 0.823529, 0.329412, 1 )
custom_colors/font_color_pressed = Color( 1, 0.737255, 0, 1 )
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 18 )
custom_styles/normal = SubResource( 12 )
icon = ExtResource( 6 )
icon_align = 1
expand_icon = true

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true
mix_target = 1

[node name="ButtonClickedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="LevelsButton" to="." method="_on_LevelsButton_pressed"]
